# OpenTrainyard

./: .gitignore  Cargo.toml  README.md  Trunk.toml  commands.txt  index.html  manifest.json  scripts.py  trainyard-35ecb771f85255b.js  trainyard-4171683ece7a79dc.js  trainyard-41a4ce8dcbbebc66.js  trainyard-4426a565d8e02cf1.js  trainyard-4ead0b1fec5a51ff.js  trainyard-528f4427b0ee580c.js  trainyard-53613078ba28a7d7.js  trainyard-57b35163d1b66474.js  trainyard-5dd3f105b17be89b.js  trainyard-629e62fcedf3b038.js  trainyard-75f83a9137ca8edc.js  trainyard-7fb0663dc2bb0bd9.js  trainyard-80db2a4972251411.js  trainyard-82fb89ffc48cd08.js  trainyard-8a8fe0ea216bf853.js  trainyard-a69d261e2ff5db6.js  trainyard-b1908299af311645.js  trainyard-ba4e457382ad16eb.js  trainyard-d8f38891daacca7.js  trainyard-dca80f17070a6cdb.js  trainyard-debf7e1bf71dcdf0.js  trainyard-ea950644cd68055e.js  trainyard-eacdcb6babe64023.js  trainyard-ec469b72397bbca1.js  trainyard-f08350cff5a284ba.js  trainyard-f25e5f14ec8a06e8.js  trainyard-f74e56db3dc9b320.js  trainyard-ff204831302ccdf3.js
.github/workflows/: ci.yml  deploy-page.yaml  release.yaml
assets/: all_puzzles.json  all_puzzles_clean_ordered.json
src/: all_puzzles_clean.rs  all_puzzles_clean_template.rs  audio.rs  board.rs  data_saving.rs  game_screen.rs  loading.rs  logic.rs  main.rs  menu.rs  menu_credits.rs  menu_game_screen.rs  menu_levels.rs  menu_solutions.rs  menu_title.rs  menu_utils.rs  old_main  player.rs  scrollbar.rs  simulator.rs  tests.rs  tile.rs  train.rs  utils.rs
